--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,7 @@ services:
       - "50000:50000"
     volumes:
       - jenkins_home:/var/jenkins_home
-    networks:
-      - jenkins-network
+      - /var/run/docker.sock:/var/run/docker.sock
 volumes:
   jenkins_home:
 networks:
