--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,16 @@ services:
       - "50000:50000"
     volumes:
       - jenkins_home:/var/jenkins_home
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock  # Montar el socket de Docker
     networks:
       - jenkins-network
+    user: root  # Ejecuta como root para poder instalar Docker
+    environment:
+      - DOCKER_HOST=tcp://docker:2375  # Configuración opcional
+    command: >
+      bash -c "apt-get update &&
+               apt-get install -y docker.io &&
+               /usr/local/bin/jenkins.sh"
 volumes:
   jenkins_home:
 networks:
